[package]
name = "base-kn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
rand = "0.8.4"


[[example]]
name="first-look"
path="example/first_look.rs"

[[example]]
name="yew-test"
path="example/yew.rs"

[[example]]
name="owner"
path="example/ownership.rs"

[[example]]
name="borrow"
path="example/borrow.rs"

[[example]]
name="string"
path="example/strings.rs"

[[example]]
name="pointer"
path="example/pointer.rs"

[[example]]
name="closer"
path="example/closer.rs"

[[example]]
name="iterator"
path="example/iterator.rs"

[[example]]
name="newtype"
path="example/newtype.rs"